openni2src: Mark element as a live source

https://bugzilla.gnome.org/show_bug.cgi?id=732535